# File-Tree-Generator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/File_Tree_Generator_SainitinD/: main.py
src/File_Tree_Generator_SainitinD.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/Ftree/: __init__.py  ftree.py
src/SupaFileTree/: __init__.py  ftree.py
